--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "lodash": "^4.17.5",
     "react": "0.14.3",
     "react-dom": "0.14.3",
     "webpack": "3.10.0"
