--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.6.1",
+    "font-awesome": "^4.7.0",
+    "globalize": "^1.3.0",
     "jquery": "^1.9.1",
     "less": "2.3.1",
     "less-loader": "4.0.5",
