--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "scripts": {
     "start": "npm run build & npm run backend",
     "backend": "cd backend; go run main.go",
-    "build": "webpack --watch"
+    "build": "webpack -d --config webpack.config.js --watch"
   },
   "dependencies": {
     "babel-runtime": "6.26.0",
     "lodash": "4.17.5",
     "moment": "2.20.1",
-    "react": "16.0",
+    "react": "^16.0.0",
     "react-big-calendar": "0.18.0",
-    "react-dom": "16.0",
+    "react-dom": "^16.0.0",
     "webpack": "3.10.0"
   },
   "devDependencies": {
