--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "babel-runtime": "6.26.0",
     "lodash": "4.17.5",
-    "moment": "2.20.1",
     "react": "^16.0.0",
     "react-big-calendar": "0.18.0",
     "react-dom": "^16.0.0",
@@ -27,6 +26,7 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
     "bootstrap": "^4.0.0",
+    "cldr-data": ">=25",
     "css-loader": "0.28.9",
     "eslint": "4.17.0",
     "eslint-config-airbnb": "16.1.0",
@@ -36,10 +36,13 @@
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.6.1",
     "font-awesome": "^4.7.0",
-    "globalize": "^1.3.0",
+    "globalize": ">=1.2.0-a <2.0.0",
+    "globalize-webpack-plugin": "0.3.x",
+    "iana-tz-data": "^2017.1.0",
     "jquery": "^1.12.4",
     "less": "2.3.1",
     "less-loader": "4.0.5",
+    "moment": "^2.20.1",
     "popper.js": "^1.12.9",
     "react-bootstrap": "^0.28.0",
     "style-loader": "0.20.1",
