--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.0.0",
     "react-big-calendar": "0.18.0",
     "react-dom": "^16.0.0",
+    "react-flexbox-grid": "^2.0.0",
     "webpack": "3.10.0"
   },
   "devDependencies": {
