--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "babel-runtime": "6.26.0",
-    "lodash": "4.17.5",
-    "react": "^16.0.0",
+    "lodash": "^4.17.5",
+    "react": "^16.2.0",
     "react-big-calendar": "0.18.0",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
     "webpack": "3.10.0"
   },
