--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ services:
   - mysql 
 
 before_install:
-  - mysql -u root --password="password" < test/schema.sql
+  - mysql -u root --password="" < test/schema.sql
 
 install:
   - go get -v github.com/onsi/ginkgo/ginkgo
