--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,6 @@ install:
   # - go get -v -t ./...
   - export PATH=$PATH:$HOME/gopath/bin
 
-script: ginkgo -r --randomizeAllSpecs --randomizeSuites --failOnPending --cover --trace --race --compilers=2
+script: go test < backend
+  
+  # ginkgo -r --randomizeAllSpecs --randomizeSuites --failOnPending --cover --trace --race --compilers=2
