--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ install:
   # - go get -v -t ./...
   - export PATH=$PATH:$HOME/gopath/bin
 
-script: go test -v ./backend
+script: go test -v ./...
   
   # ginkgo -r --randomizeAllSpecs --randomizeSuites --failOnPending --cover --trace --race --compilers=2
