attempting to debug travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ before_install:
 install:
   - go get -v github.com/onsi/ginkgo/ginkgo
   - go get -v github.com/onsi/gomega
-  # - go get -v -t ./...
+  #  - go get -v -t ./...
   - export PATH=$PATH:$HOME/gopath/bin
 
-script: go test -v ./...
+script: cd backend && go test
   
   # ginkgo -r --randomizeAllSpecs --randomizeSuites --failOnPending --cover --trace --race --compilers=2
