--- a/package.json
+++ b/package.json
@@ -11,36 +11,36 @@
     "test": "./node_modules/.bin/wdio wdio.conf.js"
   },
   "dependencies": {
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-runtime": "^6.26.0",
-    "bootstrap": "^4.0.0",
-    "css-loader": "^0.28.11",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
-    "less": "^3.0.1",
-    "less-loader": "^4.1.0",
-    "lodash": "^4.17.5",
-    "moment": "^2.21.0",
-    "react": "^16.2.0",
-    "react-big-calendar": "^0.19.0",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.2.0",
-    "react-flexbox-grid": "^2.0.0",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13"
+    "babel-loader": "7.1.4",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "babel-runtime": "6.26.0",
+    "bootstrap": "4.0.0",
+    "css-loader": "0.28.11",
+    "font-awesome": "4.7.0",
+    "jquery": "3.3.1",
+    "less": "3.0.1",
+    "less-loader": "4.1.0",
+    "lodash": "4.17.5",
+    "moment": "2.21.0",
+    "react": "16.2.0",
+    "react-big-calendar": "0.19.0",
+    "react-bootstrap": "0.32.1",
+    "react-dom": "16.2.0",
+    "react-flexbox-grid": "2.0.0",
+    "style-loader": "0.20.3",
+    "webpack": "3.10.0",
+    "webpack-cli": "2.0.13"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-webdriverio": "^0.4.3",
-    "chromedriver": "^2.37.0",
-    "wdio-chromedriver-service": "^0.1.2",
-    "wdio-jasmine-framework": "^0.3.2",
-    "wdio-mocha-framework": "^0.5.13",
-    "wdio-selenium-standalone-service": "0.0.10",
-    "webpack-dev-server": "^3.1.1"
+    "chai": "4.1.2",
+    "chai-webdriverio": "0.4.3",
+    "chromedriver": "2.36.0",
+    "wdio-chromedriver-service": "0.1.2",
+    "wdio-jasmine-framework": "0.3.2",
+    "wdio-mocha-framework": "0.5.12",
+    "wdio-selenium-standalone-service": "0.0.9",
+    "webpack-dev-server": "2.11.1"
   }
 }
