--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chai": "4.1.2",
     "chai-webdriverio": "0.4.3",
     "chromedriver": "2.36.0",
+    "wdio": "^2.0.0",
     "wdio-chromedriver-service": "0.1.2",
     "wdio-jasmine-framework": "0.3.2",
     "wdio-mocha-framework": "0.5.12",
